Added margin to send email btn

--- a/templates/admin/user_metrics.html
+++ b/templates/admin/user_metrics.html
@@ -104,7 +104,7 @@
 </div>
 <br>
 <div style="display:flex;align-items:center;justify-content:flex-end;">
-<a href="{% url 'email_form' %}" style="padding:7px 1rem;background:rgb(9, 137, 160);color:#fff;">Send Email</a>
+<a href="{% url 'email_form' %}" style="padding:7px 1rem;background:rgb(9, 137, 160);color:#fff;margin-top:3rem;">Send Email</a>
 </div>
 <br>
 <br>
